--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <title>User ID Page</title>
 </head>
 <body>
+<!-- modify this form HTML and place wherever you want your form -->
 <form
   action="https://formspree.io/f/xjvqvzqe"
   method="POST"
-  enctype="multipart/form-data"
 >
   <label>
     Your email:
     <input type="email" name="email">
   </label>
   <label>
-    Your file:
-    <input type="file" name="upload">
+    Your message:
+    <textarea name="message"></textarea>
   </label>
+  <!-- your other form fields go here -->
   <button type="submit">Send</button>
 </form>
 </body>
