--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 >
   <label>
     Your email:
-    <input type="email" name="email">
+    <input type="name" name="username">
   </label>
   <label>
     Your message:
